<resources>
  <string name="app_name">Freelist</string>
  <string name="settings">Settings</string>
  <string name="delete_all_entries">Delete all entries</string>
  <string name="undo">Undo</string>
  <string name="action_bar_title"></string>
  <string name="freelists_action_bar_title">My Freelists</string>
  <string name="choose_parent_action_bar_title">Choose parent</string>
  <string name="action_freelists">Freelists</string>
  <string name="action_calendar">Calendar</string>
  <string name="action_search">Search</string>
  <string name="action_settings">Settings</string>
  <string name="schedule_prefs">Preferred days and times</string>
  <string name="notes_hint">Notes</string>
  <string name="title_hint">Title</string>
  <string name="part_of">Contributes to Freelist(s)</string>
  <string name="hint_hours">Hours</string>
  <string name="hint_minutes">Minutes</string>
  <string name="ok">Ok</string>
  <string name="starts_at_or_after_time">time</string>
  <string name="starts_at_or_after_date">Starts at or after</string>
  <string name="duration">Duration</string>
  <string name="finish_at_or_before_date">Finish at or before</string>
  <string name="finish_at_or_before_time">time</string>
  <string name="mondays">Mon</string>
  <string name="tuesdays">Tue</string>
  <string name="wednesdays">Wed</string>
  <string name="thursdays">Thu</string>
  <string name="fridays">Fri</string>
  <string name="saturdays">Sat</string>
  <string name="sundays">Sun</string>
  <string name="mornings">Mornings</string>
  <string name="afternoons">Afternoons</string>
  <string name="evenings">Evenings</string>
  <string name="at_night">At night</string>
  <string name="repeat">Repeat every</string>
  <string name="starts_after">Starts after completion of Freelist(s)</string>
  <string name="schedule_status">Not schedulable without duration</string>
</resources>
