<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android"
  >

  <item
    android:id="@+id/bottom_app_bar_freelists"
    android:icon="@drawable/ic_freelist_logo2"
    android:title="@string/action_freelists"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/bottom_app_bar_calendar"
    android:icon="@drawable/ic_event"
    android:title="@string/action_calendar"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/bottom_app_bar_search"
    android:icon="@drawable/ic_search"
    android:title="@string/action_search"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/app_bar_settings"
    android:title="@string/action_settings"
    app:showAsAction="never"/>
</menu>